# meta

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  prevalidate.sh  pyproject.toml  requirements.txt
openenv_datapipeline/: __init__.py  env.py  graders.py  models.py  tasks.py
server/: app.py
