[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data-pipeline-debugger"
version = "1.0.0"
description = "OpenEnv real-world ETL debugging environment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.1.0",
  "fastapi>=0.115.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.24.0",
  "openai>=1.0.0",
  "pyyaml>=6.0.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openenv_datapipeline*"]
